[2026-09-01][DEV]plan功能开发1